Lots of styling changes. No longer dark mode. New tabs work well

--- a/drag.css
+++ b/drag.css
@@ -1,9 +1,9 @@
 .layout-box {
     position: relative;
     border: 4px solid;
-    border-radius: 12px;
+    border-radius: 0px 0px 12px 12px;
     width: 1200px;
-    height: 600px;
+    height: 620px;
     resize: both;
     overflow: auto;
 }
@@ -12,7 +12,6 @@
 	position: absolute;
 	width: 150px;
 	height: 150px;
-	cursor: move;
 	background-size: 400%;
 }
 
